tdf#118731 delay on showing dialogs that create SdrModels

for their preview widgets. since...

commit 4be44a7a6f2f480e55255d7cdd119f3d6577d085
Date:   Thu May 24 19:09:44 2018 +0200

    SOSAW080: Cleanup of SdrModel

Change-Id: I102b64bdacc56a41091bbe60e932c2915f20323f